removed resizing bug, added animation back to page swipe on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -558,7 +558,7 @@
 	}
 
 	.main-wrapper {
-		transition: transform .25s ease;
+		transition: transform .25s ease !important;
 	}
 
 	.view-reference.main-wrapper {
